--- a/style.css
+++ b/style.css
@@ -342,3 +342,94 @@ section#slider-1{
 #about-center-text{
     margin-top: 30px;
 }
+
+#who-we-are-about{
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+#who-we-are-about img{
+    border-radius: 50%;
+    margin-bottom: 30px;
+    border: 7px solid rgb(207, 200, 200);
+}
+
+#who-we-are-about img:hover{
+    border: 7px solid #f9cb1e;
+}
+
+#who-we-are-about i{
+    margin-left: 20px;
+}
+
+/* about-four-div */
+
+#about-four-div {
+   
+    justify-content: space-between;
+}
+
+.four-bg{
+    background-color: white;
+    padding-top: 10px;
+    /* width: auto; */
+    /* margin-right:2px; */
+}
+
+/* what we do about */
+#what-we-do-about{
+    background-color: white;
+    padding: 50px 0;
+}
+
+#testimonial-about{
+    background-color: gray;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+.testimonial-about-content{
+    padding: 40px 10px;
+    text-align: center;
+    background-color: #f9cb1e;
+    color: black;
+}
+
+.testimonial-about-content p{
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.testimonial-about-content h6{
+    font-weight: bold;
+    font-size: 14px;
+    padding: 0;
+    margin-bottom: 34px;
+}
+
+.about-last-right-div-text h3{
+    font-size: 22px;
+}
+
+.about-last-right-div-text p{
+    font-size: 14px;
+    color: gray;
+    padding-top: 20px;
+}
+
+.about-last-right-div-text div{
+    color: black;
+    text-align: right;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    padding: 0;
+    margin-bottom: 30px;
+}
+
+.about-last-right-div-text div p{
+    padding: 10;
+    margin: 0;
+    color: black;
+}
